@@ -1,5 +1,7 @@
 === master
 
+* Deprecate filter_having extension (jeremyevans)
+
 * Deprecate empty_array_ignore_nulls extension (jeremyevans)
 
 * Deprecate Array#sql_array in the core_extensions extension (jeremyevans)
